# Agentic-Advanced-RAG

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
graph_rag/: settings.yaml
src/: __init__.py  datald_.ipynb  graphrag.ipynb  interface.py  logs.txt  main.py  ms_graphrag_import.ipynb  single_agent_test.py  test.py  test_hybrid.ipynb  test_hybrid.py  test_ma.py  test_multiagent.ipynb  test_neo4j.ipynb  test_sp.py
src/.dataset/multihop/: result_sample_10.json
src/Config/: constants.py  output_pydantic.py  rag_config.py  task_prompts.py
src/Frontend/: __init__.py  callback_streamlit.py
src/LLMMA/: __init__.py  agents.py  output_pydantic.py  process.py  prompts.py  tasks.py  tools.py
src/LangGraph/: __init__.py  graph.py  nodes.py  state.py
src/Langgraph/: __init__.py  graph.py  nodes.py  state.py
src/Module/: __init__.py  graph.py  nodes.py  state.py
src/MultiAgent/: __init__.py  agents.py  process.py  tasks.py  tools.py
src/SingleAgent/: __init__.py  single_agent.py
src/Utils/: __init__.py  clustering.py  constants.py  data_processor.py  dataset_loader.py  embedder.py  graph_database.py  knowledge_graph_database.py  qa_evaluate.py  rag_evaluator.py  retriever.py  vector_database.py
tests/: doc_test.ipynb  main.py  run.py  single_agent_test.py  test_modular_agents.py  test_single_agent.py
tests/Utils/: test_retriever.py
