[tool.poetry]
name = "coling-experiment"
version = "0.1.0"
description = "Modular Agentic RAG"
authors = ["yarikama <amaki30226@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
transformers = "^4.42.4"
torch = "^2.3.1"
torchvision = "^0.18.1"
pymilvus = {extras = ["sparse"], version = "^2.4.4"}
openai = "^1.35.14"
requests = "^2.32.3"
tqdm = "^4.66.4"
langchain = "^0.2.9"
langchain-community = "^0.2.7"
langchain-milvus = "^0.1.2"
langchain-openai = "^0.1.17"
sentence-transformers = "^3.0.1"
langchain-huggingface = "^0.0.3"
pdfplumber = "^0.11.2"
llama-index = "^0.10.56"
langchain-experimental = "^0.0.62"
datasets = "^2.20.0"
crewai = {extras = ["tools"], version = "^0.51.1"}
streamlit = "^1.37.1"
pydantic = "^2.8.2"
jq = "^1.7.0"
ragas = "^0.1.12"
pandas = "^2.2.2"
langgraph = "^0.2.3"
mypy = "^1.11.1"
streamlit-pydantic = "^0.6.0"
pyarrow = "^17.0.0"
neo4j = "^5.23.1"
lshashpy3 = "^0.0.9"
pytest = "^8.3.2"
umap-learn = "^0.5.6"
numba = "^0.60.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
ipython = "^8.27.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
notebook = "^7.2.2"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]